# NNN-With-Friends

./: .gitignore  README.md  deploy.sh
backend/: Cargo.toml
backend/database/: down.sql  up.sql
backend/src/: groups.rs  login.rs  main.rs  users.rs
database/: dbreset.sh  down.sql
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: About.svelte  App.svelte  CreateForm.svelte  CreateGroupInput.svelte  GroupButton.svelte  GroupDisplay.svelte  GroupSelectionBar.svelte  GroupsPage.svelte  HomePage.svelte  LoginForm.svelte  LoginPage.svelte  NavBar.svelte  NavButton.svelte  Page404.svelte  ProfilePage.svelte  Timer.svelte  UserInfoBox.svelte  api.ts  app.css  login.ts  main.js  misc.ts  state.js  stores.js
frontend/src/mainpage/: NavBar.svelte  NavButton.svelte
